--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Simple Website</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Simple Website!</h1>
-    </header>
-    <main>
-        <button id="fetchDataBtn">Fetch Backend Data</button>
-        <div id="backendData"></div>
-    </main>
-    <script src="script.js"></script>
+  <h1>Hello, User!</h1>
+  <input type="text" id="nameInput" placeholder="Enter name" />
+  <button onclick="sendData()">Submit</button>
+  <div id="response"></div>
+  <script src="script.js"></script>
 </body>
 </html>
